Fixed navbar on mobile

--- a/resources/public/css/desktop.scss
+++ b/resources/public/css/desktop.scss
@@ -36,6 +36,7 @@
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
+  transform: translateY(0);
 
   @media (max-height: #{rems(739px)}) {
     position: absolute;
@@ -54,8 +55,13 @@
   flex: 0 1 auto;
 }
 .sidebar__inner {
+  position: relative;
   width: rems(320px);
   flex: 0 0 auto;
+  z-index: 5;
+}
+.hero .sidebar {
+  bottom: auto;
 }
 
 // Blocks
@@ -74,13 +80,19 @@
   padding: 0;
   border-top: 1px solid $slate;
   border-bottom: 2px solid $slate;
-  z-index: 3;
+  z-index: 200;
 }
 
 .navbar a,
 .media-links a {
+  display: block;
   text-decoration: none;
   color: $gray-teal;
+}
+
+.navbar a {
+  transform: translateX(0);
+  transition: all 250ms ease;
 }
 
 .navbar__list {
@@ -90,6 +102,7 @@
 }
 .navbar__item {
   @extend %mono;
+  display: block;
   position: relative;
   padding: rems(8px);
   opacity: 0.75;
@@ -97,7 +110,14 @@
   font-size: rems(18px);
   font-weight: 600;
   letter-spacing: rems(2px);
-  transition: all 250ms ease-in-out;
+  transition: opacity 250ms ease;
+}
+.navbar__item:hover,
+.navbar__item:active {
+  opacity: 1.0;
+}
+.navbar__item:hover a {
+  transform: translateX(#{rems(20px)});
 }
 .navbar__item::before {
   @extend %icon;
@@ -108,12 +128,8 @@
   line-height: 1;
   opacity: 0;
   transform: translateX(#{rems(-20px)});
-  transition: all 250ms ease-in-out;
+  transition: all 250ms ease;
   content: '\f105';
-}
-.navbar__item:hover {
-  opacity: 1.0;
-  padding-left: rems(32px);
 }
 .navbar__item:hover::before {
   opacity: 1;
